[gd_scene format=3 uid="uid://cr378mrpqgvkl"]

[ext_resource type="Script" uid="uid://cmd7b2c8lwk1w" path="res://GUI/MenuItems/canvas_layer.gd" id="1_1eub4"]
[ext_resource type="Theme" uid="uid://cfvabtb858o0t" path="res://main_theme.tres" id="1_jlkld"]
[ext_resource type="Script" uid="uid://duya31nkcrobb" path="res://GUI/MenuItems/items_container.gd" id="2_mlwxn"]
[ext_resource type="Script" uid="uid://deggq43cseisj" path="res://GUI/MenuItems/action_container.gd" id="3_2vwo8"]
[ext_resource type="Script" uid="uid://bcjvx3shq3qm4" path="res://GUI/MenuItems/build_menu.gd" id="3_qymyi"]
[ext_resource type="Script" uid="uid://b3qnqkhol0r5l" path="res://GUI/MenuItems/display_container.gd" id="8_w0xfj"]
[ext_resource type="Script" uid="uid://cqa0v6segmuoa" path="res://GUI/MenuItems/quest_container.gd" id="9_8mdjv"]
[ext_resource type="Texture2D" uid="uid://b4ksndue2pek8" path="res://3rd Party/assets/gui/grey_boxCross.png" id="10_0ulqf"]
[ext_resource type="AudioStream" uid="uid://c573qngroi41v" path="res://assets/wistle.wav" id="10_d70d2"]
[ext_resource type="StyleBox" uid="uid://dnfumb4a801lh" path="res://beightLightTextureForPanel.tres" id="11_g6dwa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rq840"]

[node name="CanvasLayer" type="CanvasLayer" unique_id=489143164]
script = ExtResource("1_1eub4")

[node name="ItemsContainer" type="PanelContainer" parent="." unique_id=171542394]
visible = false
offset_left = 10.0
offset_top = 14.0
offset_right = 121.0
offset_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
script = ExtResource("2_mlwxn")

[node name="VBoxContainer" type="HBoxContainer" parent="ItemsContainer" unique_id=982596471]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Tools" type="VBoxContainer" parent="ItemsContainer/VBoxContainer" unique_id=1678096504]
layout_mode = 2

[node name="Label" type="Label" parent="ItemsContainer/VBoxContainer/Tools" unique_id=817209670]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tools:"

[node name="Materials" type="VBoxContainer" parent="ItemsContainer/VBoxContainer" unique_id=118318253]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_jlkld")

[node name="TotalMaterials" type="Label" parent="ItemsContainer/VBoxContainer/Materials" unique_id=1877144671]
visible = false
layout_mode = 2
text = "Materials"

[node name="CounterContainer" type="VBoxContainer" parent="ItemsContainer/VBoxContainer" unique_id=1265385322]
layout_mode = 2

[node name="Quest Counter" type="Label" parent="ItemsContainer/VBoxContainer/CounterContainer" unique_id=993315239]
layout_mode = 2

[node name="ActionContainer" type="PanelContainer" parent="." unique_id=1335250409]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
script = ExtResource("3_2vwo8")

[node name="BuildMenu" type="HBoxContainer" parent="ActionContainer" unique_id=654291533]
layout_mode = 2
script = ExtResource("3_qymyi")

[node name="DisplayContainer" type="PanelContainer" parent="." unique_id=444481089]
custom_minimum_size = Vector2(500, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jlkld")
script = ExtResource("8_w0xfj")

[node name="DisplayStack" type="VBoxContainer" parent="DisplayContainer" unique_id=2072843785]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="DisplayContainer/DisplayStack" unique_id=1791464376]
layout_mode = 2

[node name="DisplayTitleLabel" type="Label" parent="DisplayContainer/DisplayStack/HeaderContainer" unique_id=117432779]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_jlkld")
theme_override_font_sizes/font_size = 20
text = "Welcome to Boom or Bust: Idle Goes West!"

[node name="CloseDisplayButton" type="TextureButton" parent="DisplayContainer/DisplayStack/HeaderContainer" unique_id=753120417]
unique_name_in_owner = true
z_index = 50
z_as_relative = false
layout_mode = 2
texture_normal = ExtResource("10_0ulqf")

[node name="PanelContainer" type="PanelContainer" parent="DisplayContainer/DisplayStack" unique_id=1023475520]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_jlkld")
theme_override_styles/panel = SubResource("StyleBoxTexture_rq840")

[node name="MainDisplayContainer" type="VBoxContainer" parent="DisplayContainer/DisplayStack/PanelContainer" unique_id=1597055633]
unique_name_in_owner = true
layout_mode = 2

[node name="MainDisplayLabel" type="Label" parent="DisplayContainer/DisplayStack/PanelContainer/MainDisplayContainer" unique_id=656497338]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = ExtResource("11_g6dwa")
text = "Use WASD or Arrow keys to move.

Your items and materials are displayed in the top right.

Follow the quests in the bottom right coner.
"

[node name="ButtonContainer" type="HBoxContainer" parent="DisplayContainer/DisplayStack" unique_id=901552006]
layout_mode = 2

[node name="QuestContainer" type="PanelContainer" parent="." unique_id=1169516698 node_paths=PackedStringArray("tutorial_quest_type", "repeatable_quest_type", "audio_stream_player_2d")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_bottom = 98.0
grow_horizontal = 0
theme = ExtResource("1_jlkld")
script = ExtResource("9_8mdjv")
tutorial_quest_type = NodePath("VBoxContainer/TutorialQuests")
repeatable_quest_type = NodePath("VBoxContainer/RepeatableQuests")
audio_stream_player_2d = NodePath("AudioStreamPlayer2D")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="QuestContainer" unique_id=1776675189]
stream = ExtResource("10_d70d2")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestContainer" unique_id=1603783130]
layout_mode = 2

[node name="TutorialQuests" type="VBoxContainer" parent="QuestContainer/VBoxContainer" unique_id=380639726]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="QuestContainer/VBoxContainer/TutorialQuests" unique_id=744917975]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="QuestContainer/VBoxContainer/TutorialQuests/HBoxContainer" unique_id=1510266959]
layout_mode = 2
size_flags_horizontal = 3
text = "Active Quests"

[node name="Quest Counter" type="Label" parent="QuestContainer/VBoxContainer/TutorialQuests/HBoxContainer" unique_id=586341091]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="QuestContainer/VBoxContainer/TutorialQuests" unique_id=294650812]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="QuestContainer/VBoxContainer/TutorialQuests" unique_id=1935085709]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="QuestContainer/VBoxContainer" unique_id=2076549215]
layout_mode = 2

[node name="RepeatableQuests" type="VBoxContainer" parent="QuestContainer/VBoxContainer" unique_id=987304649]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="QuestContainer/VBoxContainer/RepeatableQuests" unique_id=141898373]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="QuestContainer/VBoxContainer/RepeatableQuests/HBoxContainer" unique_id=1444946163]
layout_mode = 2
size_flags_horizontal = 3
text = "Optional:"

[node name="HSeparator" type="HSeparator" parent="QuestContainer/VBoxContainer/RepeatableQuests" unique_id=1595533925]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="QuestContainer/VBoxContainer/RepeatableQuests" unique_id=1316350376]
layout_mode = 2

[connection signal="pressed" from="DisplayContainer/DisplayStack/HeaderContainer/CloseDisplayButton" to="DisplayContainer" method="_on_close_display_button_pressed"]
